# mempalace-rs

./: Cargo.toml  README.md
docs/plans/: 2026-04-07-mempalace-rustification.md
examples/: mcp_setup.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
mempalace/: README.md
src/: config.rs  convo.rs  dialect.rs  entity_detector.rs  entity_registry.rs  error.rs  general_extractor.rs  hook_protocol.rs  knowledge_graph.rs  layers.rs  lib.rs  main.rs  mcp_server.rs  miner.rs  normalize.rs  onboarding.rs  palace_graph.rs  room_detector.rs  search.rs  split.rs  storage.rs
tests/: rust_config.rs  rust_dialect.rs  rust_entities.rs  rust_general.rs  rust_graph.rs  rust_hooks.rs  rust_kg.rs  rust_layers.rs  rust_mcp.rs  rust_mining.rs  rust_normalize.rs  rust_onboarding.rs  rust_registry.rs  rust_split.rs
