[package]
name = "mempalace-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "mempalace_rs"
path = "src/lib.rs"

[[bin]]
name = "mempalace"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
